configure swagger for books/search
